[project]
name = "html-style-enhancer"
version = "0.1.0"
description = ""
authors = [{ name = "Danyal Zia Khan", email = "danyalziakhan@gmail.com" }]
requires-python = ">=3.10,<3.12"
readme = "README.md"
dependencies = [
    "pandas>=1.5.2,<2",
    "openpyxl>=3.0.10,<4",
    "loguru>=0.6.0,<0.7",
    "tqdm>=4.64.1,<5",
    "cssutils>=2.6.0,<3",
    "beautifulsoup4>=4.11.1,<5",
    "dearpygui>=1.8.0,<2",
    "aiofile>=3.8.1,<4",
    "psutil>=5.9.4,<6",
    "excelsheet>=0.1.2",
]

[dependency-groups]
dev = [
    "ipython>=8.7.0,<9",
    "ipykernel>=6.17.1,<7",
    "black>=22.10.0,<23",
    "isort>=5.10.1,<6",
    "pytest>=7.2.0,<8",
]

[tool.uv]

[tool.hatch.build.targets.sdist]
include = ["html_style_enhancer"]

[tool.hatch.build.targets.wheel]
include = ["html_style_enhancer"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
include = '\.py$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
skip_glob = ".venv, */build, */.git"
float_to_top = true
known_first_party = "build"
skip = []
lines_between_types = 1
lines_after_imports = 2
force_single_line = true

[tool.pyright]
include = ["."]
exclude = ["**/node_modules", "**/__pycache__", ".venv", "**/temp"]
venvPath = "."
venv = ".venv"
stubPath = "stubs"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownLambdaType = false
